--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "prepare": "npm run build",
     "watch": "tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector build/index.js"
+    "inspector": "npx @modelcontextprotocol/inspector build/index.js",
+    "build-and-inspect": "pnpm run build && pnpm run inspector"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
